<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_portfolio"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textSize="20dp"
              android:padding="@dimen/padding_fourdp"
              android:layout_marginTop="@dimen/activity_horizontal_margin"
              />

    <Button
        android:id="@+id/spotifyStreamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:text="@string/spotify_streamer"
        android:textColor="@android:color/white"
        android:background="@color/udacious_orange"
        />

    <Button
        android:id="@+id/scoresApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:text="@string/scores_app"
        android:textColor="@android:color/white"
        android:background="@color/udacious_orange"
        />
    <Button
        android:id="@+id/libraryApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:text="@string/library_app"
        android:textColor="@android:color/white"
        android:background="@color/udacious_orange"
        />
    <Button
        android:id="@+id/buildItBigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:text="@string/build_it_bigger"
        android:textColor="@android:color/white"
        android:background="@color/udacious_orange"
        />
    <Button
        android:id="@+id/baconReader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:text="@string/bacon_reader"
        android:textColor="@android:color/white"
        android:background="@color/udacious_orange"
        />
    <Button
        android:id="@+id/capStone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_twenty"
        android:textColor="@android:color/white"
        android:text="@string/my_capstone"
        android:background="#00BFFF"
        />
</LinearLayout>
